# playground

./: CMakeLists.txt
file_transfer_client/: CMakeLists.txt  file_transfer_client.cpp  file_transfer_client.sln  file_transfer_client.vcxproj  file_transfer_client.vcxproj.filters
file_transfer_server/: CMakeLists.txt  file_transfer_server.cpp  file_transfer_server.sln  file_transfer_server.vcxproj  file_transfer_server.vcxproj.filters
schaeling_examples/: CMakeLists.txt  schaeling_examples.cpp  schaeling_examples.sln  schaeling_examples.vcxproj  schaeling_examples.vcxproj.filters
